# triagedeck

./: .gitignore  LICENSE  README.md  alembic.ini  example_config.json  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
client/: app.js  index.html  styles.css
django_app/: README.md  __init__.py  apps.py  export_storage.py  models.py  observability.py  permissions.py  urls.py  views.py
django_app/migrations/: 0001_initial.py
django_app/tests/: settings.py  test_django_adapter.py
docs/: api.md  architecture.md  phase1_checklist.md  spec.md
fastapi_server/: auth.py  config.py  cursor.py  db.py  errors.py  main.py  observability.py  schemas.py  storage.py
fastapi_server/tests/: test_api.py  test_client_browser.py  test_http_contract.py  test_migrations.py  test_performance_gates.py
scripts/: export_smoke.py  seed.py
