[project]
name = "triagedeck"
version = "0.1.0"
description = "triagedeck local-first reference implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.38",
  "pydantic>=2.11.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-django>=4.9.0",
  "httpx>=0.28.0",
  "ruff>=0.12.0",
  "django>=5.1.0",
  "alembic>=1.14.0",
]

[tool.pytest.ini_options]
testpaths = ["fastapi_server/tests", "django_app/tests"]
DJANGO_SETTINGS_MODULE = "django_app.tests.settings"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["django_app/migrations", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fastapi_server"]
